themes/fasto-child/style.css
/*
 Theme Name:   Fasto Child
 Theme URI:    https://github.com/openmindculture/wp-fasto-child-theme/
 Description:  Fasto Child Theme for Open-Mind-Culture.org weblog
 Author:       Ingo Steinke
 Author URI:   https://www.ingo-steinke.com/
 Template:     fasto
 Version:      1.6.2
 License:      GNU General Public License v2 or later (except for optional non-free web fonts)
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
 Text Domain:  fastochild
*/

/**
 * @license
 * MyFonts Webfont Build ID 4424710, 2022-03-05T04:06:47-0500
 *
 * The fonts listed in this notice are subject to the End User License
 * Agreement(s) entered into by the website owner. All other parties are
 * explicitly restricted from using the Licensed Webfonts(s).
 *
 * You may obtain a valid license at the URLs below.
 *
 * Webfont: LiebeRuth-Regular by LiebeFonts
 * URL: https://www.myfonts.com/fonts/liebe-fonts/liebe-ruth/regular/
 * Copyright: Copyright © 2013 by Ulrike Wilhelm. All rights reserved.
 *
 * Webfont: HealthyFreakRegular by Vozzy
 * URL: https://www.myfonts.com/fonts/vozzy/healthy-freak/regular/
 *
 *
 *
 * © 2022 MyFonts Inc
*/

/* @import must be at top of file, otherwise CSS will not work */
@import url("//hello.myfonts.net/count/438406");

@font-face {
	font-family: "HealthyFreakRegular";
	src: url('webFonts/HealthyFreakRegular/font.woff2') format('woff2'), url('webFonts/HealthyFreakRegular/font.woff') format('woff');
}
@font-face {
	font-family: "LiebeRuth-Regular";
	src: url('webFonts/LiebeRuthRegular/font.woff2') format('woff2'), url('webFonts/LiebeRuthRegular/font.woff') format('woff');
}

/* wp-fasto-child-theme 1.3.0 : other modifications */

/* raise body font color contrast */

body  {
	color: #383d4f;
	font-family: LiebeRuth-Regular, Montserrat, Arial, sans-serif;
	font-size: 16px;
	font-weight: normal;
	line-height: 32px;
}

header#theme-header h1.site-title, h1,
body h2, body h2.post-title, body h3, body h4, body h5, body h6 {
	font-family: HealthyFreakRegular, Montserrat, Arial, sans-serif;
	font-weight: normal;
	letter-spacing: normal;
	text-transform: none;
}

header#theme-header h1.site-title, h1 {
	font-size: 42px;
}

/* fix distorted image size in default gallery detail view */
img {
    max-width: 100%;
    height: auto
}

/* hide redundant poster image */
.single .article-single .post-thumb {
    display: none;
}

footer .widget p,
footer .widget p a {
    font-size: 16px;
    line-height: 1.5;
    color: white;
}

footer .widget p a:link,
footer .widget p a:visited {
    text-decoration: underline;
}

/* harmonize column heights */
.post-thumb .cover-image {
    object-fit: cover;
    aspect-ratio: 16/9;
}

@media (min-width: 1024px) {
	/* 2-column footer */
    #footer-widgets .col-desktop-4:nth-child(2) {
        flex: 0 0 65%;
        max-width: 65% !important;
    }
        #footer-widgets .col-desktop-4:nth-child(3) {
    	display:none;
    }

	/* utility classes to control responsive image layout */
	.lg-width-third {
		max-width: 33%;
	}

	.lg-width-half {
		max-width: 50%;
	}
	.alignright {
		float: right;
		margin-left: 2rem;
	}

	.alignleft {
		float: left;
		margin-right: 2rem;
	}
}

a, .color-1, .widget .color-1, .widget a:hover, .sub-menu .current-menu-item > a, .sub-menu a:hover, .menu > .menu-item > a:hover, .menu .page_item:hover > a, .menu > .menu-item:hover > a, .menu > .current-menu-item > a, .menu > .current-menu-ancestor > a, ul.tags a:hover, .comment-date, .fasto-fallback-menu .current_page_item a, .widget th a, .widget td a,
.copyright-user a, .copyright-fasto a {
    color: #114791;
}

.post-category .category-link {
	background-color: #96511c;
	height: 20px;
	padding: 0 4px;
	white-space: nowrap;
}

/* mobile more calm and compact */

@media (max-width: 767px) {
	.site-grid {
		margin-top: 0;
	}
	.logo.logo {
		max-width: unset !important; /* override parent theme or wp core default style */
	}
	.logo .site-description {
		display: none;
	}
	.post-content {
		font-size: 18px
	}
	ul.nav-menu li.lang-item {
		padding-top: 1rem;
	}
	ul.nav-menu li.lang-item a {
		font-size: 22px;
	}
	ul.nav-menu li.lang-item a img {
		width: 20%;
		height: 100%;
	}
	#searchform input {
		font-size: 20px;
	}
	header#theme-header {
		width: 100vw;
		max-width: 100%;
		display: grid;
		grid-gap: 0;
		grid-template-columns: auto 1fr auto;
		padding-left: 0;
		padding-right: 0;
	}
	header#theme-header nav {
		grid-column: 1;
		grid-row: 1;
	}
	header#theme-header .logo {
		flex-direction: column;
		justify-content: center;
		grid-column: 2;
		grid-row: 1;
	}
	header#theme-header .search-mobile {
		grid-column: 3;
		grid-row: 1;
	}
	header#theme-header .site-title {
		text-align: center;
		font-size: 1rem;
	}
	header#theme-header h1.site-title, h1 {
		font-size: 34px;
		line-height: 1.25;
		margin: 0;
	}
	h1 + .author-date {
		padding-bottom: 0;
	}
	header#theme-header p {
		text-align: center;
		font-size: .75rem;
		line-height: 1;
	}
	.separator.single {
		margin: 0.5rem 0 0.5rem 0;
	}
	.breadcrumb-navigation {
		margin-bottom: 0;
	}
	.single ul.breadcrumb {
		font-size: 16px;
		font-size: 1rem;
	}
	.single ul.breadcrumb li:last-child .p-name {
		display: none;
	}
}

/* replace American with British flag in language selector */
nav .lang-item-en a img {
	content: url("data:image/svg+xml,%3Csvg width='1e3' height='600' viewBox='0 0 50 30' xmlns='http://www.w3.org/2000/svg'%3E%3CclipPath id='a'%3E%3Cpath d='m25 15h25v15zv15h-25zh-25v-15zv-15h25z'/%3E%3C/clipPath%3E%3Cpath d='m0 0v30h50v-30z' fill='%23012169'/%3E%3Cpath d='M0,0 50,30M50,0 0,30' stroke='%23fff' stroke-width='6'/%3E%3Cpath d='M0,0 50,30M50,0 0,30' clip-path='url(%23a)' stroke='%23C8102E' stroke-width='4'/%3E%3Cpath d='m-1 11h22v-12h8v12h22v8h-22v12h-8v-12h-22z' fill='%23C8102E' stroke='%23FFF' stroke-width='2'/%3E%3C/svg%3E");
	border: solid 1px #000;
}

/* experimental / new CSS features */

.article:has(img.cover-image.lazyload) {
	aspect-ratio: 600 / 800;
	max-width: 100vw;
}

@container (max-width: 700px) {
	.article, .article img.cover-image {
		max-width: 100%;
	}
}

